--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,7 +1,10 @@
-@import 'styles/variables.scss';
-@import '../node_modules/bootstrap-scss/bootstrap.scss';
-@import '../node_modules/bootstrap-scss/bootstrap-grid.scss';
-@import '../node_modules/bootstrap-scss/bootstrap-reboot.scss';
+/* @import 'styles/variables.scss'; */
+/* @import '../node_modules/bootstrap-scss/bootstrap.scss'; */
+/* @import '../node_modules/bootstrap-scss/bootstrap-grid.scss'; */
+/* @import '../node_modules/bootstrap-scss/bootstrap-reboot.scss'; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @font-face {
   font-family: 'Gotham';
