--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -6,29 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Gotham';
-  src: url('/fonts/GothamMedium.woff2') format('woff2'), url('/fonts/GothamMedium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Gotham';
-  src: url('/fonts/Gotham-Light.woff2') format('woff2'), url('/fonts/Gotham-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Gotham Book';
-  src: url('/fonts/Gotham-Book.woff2') format('woff2'), url('/fonts/Gotham-Book.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+@import "./fonts/fonts.css";
 
 .app {
   display: flex;
@@ -48,8 +26,18 @@ html {
 }
 
 body {
-  font-family: 'Gotham book', Tahoma, Arial, Helvetica, sans-serif;
-  font-weight: 500;
+  @apply p-0 m-0;
+  font-family: "Gotham", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  font-weight: normal;
+  line-height: 1.2em;
+  font-size: 13px;
+  -webkit-font-smoothing: antialiased;
+
   max-width: 100vw;
   overflow: hidden;
   color: #6a6a6a;
@@ -121,7 +109,8 @@ textarea,
 
 form {
   max-width: 420px;
-  // hides the fields as long as the material design styles are not loaded
+
+  /* hides the fields as long as the material design styles are not loaded */
   label,
   input,
   textarea {
