--- a/Front/src/components/Card/style.module.css
+++ b/Front/src/components/Card/style.module.css
@@ -1,7 +1,7 @@
 .card {
-  // border: 2px solid #e7e7e7;
-  // border-radius: 4px;
-  // padding: .5rem;
+  /* border: 2px solid #e7e7e7; */
+  /* border-radius: 4px; */
+  /* padding: .5rem; */
   position: relative;
   flex: 1 0 auto;
   margin: 1rem;
