--- a/Front/src/features/DeckCreation/InlineCard/style.module.css
+++ b/Front/src/features/DeckCreation/InlineCard/style.module.css
@@ -1,6 +1,6 @@
 .card {
-  // position: relative;
-  // flex: 1 0 auto;
+  /* position: relative; */
+  /* flex: 1 0 auto; */
   margin: 1rem;
   color: #ddd;
   cursor: pointer;
