--- a/Front/src/features/DeckCreation/InlineCards/style.module.css
+++ b/Front/src/features/DeckCreation/InlineCards/style.module.css
@@ -1,9 +1,9 @@
 
 .cards {
-  // display: grid;
-  // grid-template-columns: repeat(3, 1fr);
-  // grid-auto-rows: auto;
-  // grid-gap: 1rem;
+  /* display: grid; */
+  /* grid-template-columns: repeat(3, 1fr); */
+  /* grid-auto-rows: auto; */
+  /* grid-gap: 1rem; */
   display: flex;
   flex-wrap: wrap;
   margin: -1rem -1rem;
