--- a/Front/src/components/Card/style.module.scss
+++ b/Front/src/components/Card/style.module.scss
@@ -7,8 +7,8 @@
   margin: 1rem;
   color: #fff;
   cursor: pointer;
-  max-width: 223px;
-  width: 223px;
+  max-width: 250px;
+  width: 250px;
   max-height: 350px;
   height: 350px;
 
@@ -40,13 +40,57 @@
   
   &-type {
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    margin-left: 0.5rem;
     font-size: 2.5rem;
-    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+    -webkit-text-stroke: 2px;
+    -webkit-text-stroke-color: #d60;
   }
   
   &-image {
     height: 100%;
+  }
+  
+  &-add {
+    left: 0.2rem;
+  }
+
+  &-delete {
+    right: 0.2rem;
+  }
+
+  &-add, &-delete {
+    position: absolute;
+    top: 0.2rem;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: capitalize;
+    color: #fff;
+    background-color: #005e6e;
+    font-size: 32px;
+    padding: 5px 10px 5px 10px;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    border-radius: 50px;
+    border: none;
+    outline: none !important;
+    cursor: pointer;
+    font-weight: bold;
+    transition: opacity 0.2s ease-in-out;
+
+    &:hover {
+      opacity: 0.7;
+      color: #fff;
+      text-decoration: none;
+    }
+
+    &[disabled] {
+      opacity: 0.37;
+      background-color: #005e6e;
+    }
   }
 }
