Improve Card name styling

--- a/Front/src/features/QuickDeckListView/style.module.scss
+++ b/Front/src/features/QuickDeckListView/style.module.scss
@@ -1,8 +1,18 @@
+.cardBackground {
+  // background-color: bisque;
+}
 
-cardDescription {
-  background-color: bisque;
+.cardDescription {
+  background-color: #005464;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 2rem;
+  top: -1rem;
+  position: relative;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
   
-card-image {
+.card-image {
   height: 100%;
 }
