--- a/Front/src/features/QuickDeckListView/style.module.scss
+++ b/Front/src/features/QuickDeckListView/style.module.scss
@@ -4,11 +4,15 @@
 
 .cardDescription {
   background-color: #005464;
+
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
+
   height: 2rem;
   top: -1rem;
   position: relative;
+
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
